Replace exp4j with lucene-expressions and slim Bigtable/Hadoop dependencies
Expression engine:
- Replace exp4j (unmaintained) with lucene-expressions (JavaScript-like
  syntax compiled to JVM bytecode). ExpressionUtil.Expression wrapper is
  stateless/thread-safe; variables are derived by the parser.
- Custom functions registered via MethodHandle: if, switch3-8 (all-case
  scan bug fixed), timestamp_to_date, timestamp_diff_*, plus log/log2/
  cbrt/signum aliases. pi/e bound as constants.
- Breaking syntax changes: == (was =), && / || (were & / |), pow(a,b)
  (^ is now bitwise XOR), ternary ?: available.
- Upgrade Lucene 10.3.2 -> 10.5.0.

Dependency slimming:
- New in-repo HBaseBytes codec (wire-compatible with HBase Bytes) replaces
  org.apache.hadoop.hbase.util.Bytes; hbase-common demoted to test scope,
  where HBaseBytesTest verifies byte compatibility against the real thing.
- Remove Bigtable 'hadoop' (Writable) cell format and its Writable helpers.
- Supply hadoop classes for ParquetIO via hadoop-client-api 3.4.2 (shaded,
  no transitive deps) instead of transitive hadoop-common 2.10.2, dropping
  Jetty 6, Jersey 1.9, asm:asm:3.1 and other EOL artifacts from runtime.
- Replace commons-io / commons-compress IOUtils with InputStream.readAllBytes.
- Delete unused BigtableRowToElementConverter (depended on removed format).

All 876 tests pass.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>